examples/httpbin/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: ingress
spec:
  rules:
  - host: httpbin.ingress.k8s
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          serviceName: httpbin
          servicePort: 80
